Working serialization